Changes in some code and README
Upgraded Readme.md.

Moved the script and style in more relevant folders.

Script no longer imports the CSS as though it were a module and no longer creates the canvas as we now have script link and a pre-existing canvas in the initial HTML page.

Now the orbit object can run in an elliptic orbit.

Made the project compatible with NetBeans as well (by importing it in NetBeans and setting some run configurations to the project).

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three.js Project</title>
-    </head>
-    <body>
-    <script type="module" src="/main.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="data:;base64,iVBORw0KGgo=">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>BBM412 2024 Fall Project</title>
+		
+		<script type="module" src="/scripts/main.js"></script>
+		<link rel="stylesheet" href="/styles/style.css">
+		<!-- <style type="text/css" src="/styles/style.css"></style> --> <!-- NetBeans complains to this type of style linking -->
+	</head>
+	<body>
+		<!-- Will be resized by Three.js anyway but let it be initially in sufficiently appropriate size -->
+		<canvas id="the_canvas" width=1280 height=800></canvas>
+	</body>
 </html>
