TransformControls added, old mechanics cancelled, handled some small cases, updated help menu text

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	<h3>Help Menu</h3>
 	<ul>
 		<li><b>Arrow Keys:</b> Move the selected object in X and Y directions.</li>
-		<li><b>W/S:</b> Move the selected object along the Z-axis.</li>
-		<li><b>Q/E:</b> Rotate the selected object around the Y-axis.</li>
-		<li><b>A/D:</b> Rotate the selected object around the X-axis.</li>
+		<li><b>W</b> Translate mode</li>
+		<li><b>Q</b> Rotation mode</li>
+		<li><b>E</b> Scale mode</li>
 		<li><b>Mouse:</b> Hover to highlight and click to select objects.</li>
 		<li><b>H:</b> Toggle this help menu.</li>
 		<li><b>1/2/3:</b> Change shaders</li>
