music control added, main screen fixed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 	<link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
+
+<div id="mainMenu">
+	<h1 id="projectTitle">BBM412 2024 Fall Project</h1> <!-- Proje başlığı -->
+	<button id="myButton">Click</button> <!-- Buton -->
+</div>
+
+<button id="musicButton" class="emoji-button">🔊</button>
+
 <!-- Will be resized by Three.js anyway but let it be initially in sufficiently appropriate size -->
 <canvas id="the_canvas" width=1280 height=800></canvas>
 <div id="helpMenu" style="display: none; position: absolute; top: 10px; left: 10px; background: rgba(0, 0, 0, 0.8); color: white; padding: 20px; border-radius: 8px;">
@@ -24,5 +32,7 @@
 		<li><b>1/2/3:</b> Change shaders</li>
 	</ul>
 </div>
+
+
 </body>
 </html>
