--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 
 <div id="mainMenu">
-	<h1 id="projectTitle">BBM412 2024 Fall Project</h1> <!-- Proje başlığı -->
+	<h1 id="projectTitle">BBM412 Computer Graphics Final Project <br/>
+		Planetary Orbit Simulator: Explore Kepler's Laws</h1> <!-- Proje başlığı -->
+	<img id="keplerImg" src="resources/Portrait_Confused_With_Johannes_Kepler_1610.jpg"  height="440" width="500">
 	<button id="myButton">Click</button> <!-- Buton -->
 </div>
 
