--- a/index.html
+++ b/index.html
@@ -18,6 +18,32 @@
 	<button id="myButton">Click</button> <!-- Buton -->
 </div>
 
+<div id="wrapper" style="display: none;">
+	<div id="scroll-text">
+		<h1>  KEPLER'S LAWS	</h1>
+		<p>Kepler's First Law: each planet's orbit about the Sun is an ellipse.</p>
+		<p>The Sun's center is always located at one focus of the orbital ellipse.</p>
+		<p>The Sun is at one focus.</p>
+		<p>The planet follows the ellipse in its orbit, meaning that the planet to Sun distance is constantly changing as the planet goes around its orbit.</p>
+
+		<p>Kepler's Second Law: the imaginary line joining a planet and the Sun sweeps equal areas of space during equal time intervals as the planet orbits.</p>
+		<p>Basically, that planets do not move with constant speed along their orbits.</p>
+		<p>Rather, their speed varies so that the line joining the centers of the Sun and the planet sweeps out equal parts of an area in equal times.</p>
+		<p>The point of nearest approach of the planet to the Sun is termed perihelion.</p>
+		<p>The point of greatest separation is aphelion, hence by Kepler's Second Law, a planet is moving fastest when it is at perihelion and slowest at aphelion.</p>
+
+		<p>Kepler's Third Law: the squares of the orbital periods of the planets are directly proportional to the cubes of the semi-major axes of their orbits.</p>
+		<p>Kepler's Third Law implies that the period for a planet to orbit the Sun increases rapidly with the radius of its orbit.</p>
+		<p>Thus we find that Mercury, the innermost planet, takes only 88 days to orbit the Sun.</p>
+		<p>The earth takes 365 days, while Saturn requires 10,759 days to do the same.</p>
+
+		<p>Though Kepler hadn't known about gravitation when he came up with his three laws, they were instrumental in Isaac Newton deriving his theory of universal gravitation, which explains the unknown force behind Kepler's Third Law.</p>
+		<p>Kepler and his theories were crucial in the better understanding of our solar system dynamics and as a springboard to newer theories that more accurately approximate our planetary orbits.</p>
+
+	</div>
+</div>
+
+
 <button id="musicButton" class="emoji-button">🔊</button>
 
 <!-- Will be resized by Three.js anyway but let it be initially in sufficiently appropriate size -->
