back to main menu button added

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
 <button id="musicButton" class="emoji-button">🔊</button>
 
+<button id="backTo" >Back to main menu</button>
+
 <!-- Will be resized by Three.js anyway but let it be initially in sufficiently appropriate size -->
 <canvas id="the_canvas" width=1280 height=800></canvas>
 <div id="helpMenu" style="display: none; position: absolute; top: 10px; left: 10px; background: rgba(0, 0, 0, 0.8); color: white; padding: 20px; border-radius: 8px;">
