play button added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 	<h1 id="projectTitle">BBM412 Computer Graphics Final Project <br/>
 		Planetary Orbit Simulator: Explore Kepler's Laws</h1> <!-- Proje başlığı -->
 	<img id="keplerImg" src="resources/Portrait_Confused_With_Johannes_Kepler_1610.jpg"  height="440" width="500">
-	<button id="myButton">Click</button> <!-- Buton -->
+	<div class="button-container">
+		<button id="myButton">Credits</button>
+		<button id="newButton">Play</button>
+	</div>
 </div>
 
 <div id="wrapper" style="display: none;">
