GAME added, scoring added,

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
 
+
+<div  id="currentScore" >
+	<h1 id="txt" >your current score is </h1>
+</div>
+
+
 <div id="mainMenu">
 	<h1 id="projectTitle">BBM412 Computer Graphics Final Project <br/>
 		Planetary Orbit Simulator: Explore Kepler's Laws</h1> <!-- Proje başlığı -->
