currentScore display updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 
-<div  id="currentScore" >
+<div  id="currentScore" style="display:none;" >
 	<h1 id="txt" >your current score is </h1>
 </div>
 
