Slowed down the score system

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <div  id="currentScore" style="display:none;" >
-	<h1 id="txt" >your current score is </h1>
+	<h1 id="txt" >Score: </h1>
 </div>
 
 
