--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<h1 id="projectTitle">BBM412 Computer Graphics Final Project <br/>
 		Planetary Orbit Simulator: Explore Kepler's Laws</h1> <!-- Proje başlığı -->
 	<div class="button-container">
-		<button id="myButton">Credits</button>
+		<button id="myButton">Kepler's Laws</button>
 		<button id="newButton">Play</button>
 	</div>
 </div>
@@ -54,7 +54,7 @@
 
 <button id="musicButton" class="emoji-button">🔊</button>
 
-<button id="backTo" >Back to main menu</button>
+<button id="backTo" hidden >Back to main menu</button>
 
 <!-- Will be resized by Three.js anyway but let it be initially in sufficiently appropriate size -->
 <canvas id="the_canvas" width=1280 height=800></canvas>
